[package]
name = "dfn_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
directories = "6.0.0"
futures-util = "0.3.31"
iced = { version = "0.14.0", features = ["tokio"] }
reqwest = { version = "0.13.1", features = ["stream"] }
rfd = "0.17.2"
tokio = { version = "1.49.0", features = ["full"] }
